--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pater
 Title: Turn a URL pathname into a regular expression
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
+    person("Julio", "Collazos", , "amarullazo626@gmail.com", role = c("aut", "cre"))
 Description: R's implementation of the Javascript library 'path-to-regexp'. It has been written to provide R web frameworks features such as parameter matching, optional parameters and parameter wildcards.
 License: MIT + file LICENSE
 Encoding: UTF-8
