--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: pater
-Title: Turn a URL pathname into a regular expression
+Title: Turn a URL Pathname into a Regular Expression
 Version: 1.0.0
 Authors@R: 
     c(
